--- a/app/Makefile
+++ b/app/Makefile
@@ -26,6 +26,8 @@ include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.installer_script
 
 include $(BOLOS_SDK)/Makefile.defines
 
+include $(BOLOS_SDK)/Makefile.manifest
+
 DEFINES += APP_ACCOUNT_MODE_ENABLED
 
 $(info ************ TARGET_NAME  = [$(TARGET_NAME)])
@@ -43,12 +45,6 @@ DEFINES += SUBSTRATE_PARSER_FULL
 $(info ************ FULL PARSER ENABLED ************)
 endif
 
-ifndef COIN
-COIN=ACA
-endif
-
-include $(CURDIR)/Makefile.version
-
 $(info COIN  = [$(COIN)])
 
 ifeq ($(COIN),ACA)
@@ -57,14 +53,10 @@ DEFINES += APP_STANDARD
 ifneq ($(TARGET_NAME),TARGET_NANOS)
 DEFINES += SUBSTRATE_PARSER_FULL
 endif
-APPNAME = "Acala"
-APPPATH = "44'/787'" --path "44'/354'"
 
 else ifeq ($(COIN),ACA_XL)
 # XL app configuration
 DEFINES += APP_STANDARD SUBSTRATE_PARSER_FULL
-APPNAME = "Acala XL"
-APPPATH = "44'/787'" --path "44'/354'"
 
 else
 define error_message
@@ -74,8 +66,6 @@ COIN value not supported: [$(COIN)]
 endef
 $(error "$(error_message)")
 endif
-
-APP_LOAD_PARAMS = --curve ed25519 $(COMMON_LOAD_PARAMS) --path $(APPPATH)
 
 NANOS_STACK_SIZE := 3216
 
@@ -88,18 +78,15 @@ ifndef ICONNAME
 $(error ICONNAME is not set)
 endif
 
-include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.platform
 LDFLAGS += -z muldefs
 LDLIBS += -Lrust/target/thumbv6m-none-eabi/release -lrslib
-CFLAGS += -Wvla
-APP_SOURCE_PATH += $(CURDIR)/rust/include
 
 .PHONY: rust
 rust:
 	cd rust && CARGO_HOME="$(CURDIR)/rust/.cargo" cargo build --target thumbv6m-none-eabi --release
 
 # Before linking, we need to be sure rust lib is there
-bin/app.elf: rust
+APP_CUSTOM_LINK_DEPENDENCIES = rust
 
 .PHONY: rust_clean
 rust_clean:
@@ -107,22 +94,8 @@ rust_clean:
 
 clean: rust_clean
 
-include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.side_loading
-
-# Import generic rules from the SDK
-include $(BOLOS_SDK)/Makefile.rules
-
-#add dependency on custom makefile filename
-dep/%.d: %.c Makefile
-
-.PHONY: listvariants
-listvariants:
-ifeq ($(TARGET_NAME),TARGET_NANOS)
-	@echo VARIANTS COIN ACA ACA_XL
-else
-	@echo VARIANTS COIN ACA
-endif
-
 .PHONY: version
 version:
 	@echo "v$(APPVERSION)" > app.version
+
+include $(BOLOS_SDK)/Makefile.standard_app
